force-app/main/default/objects/Documento__c/Documento__c.object-meta.xml
<CustomObject>
    <description>Utilizado para guardar información de los diferentes documentos que son parte de una cuenta corriente</description>
    <label>Documento</label>
    <nameField>
        <label>Número de comprobante</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>