force-app/main/default/objects/Documento__c/fields/Acumulado__c.field-meta.xml
<CustomField>
    <fullName>Acumulado__c</fullName>
    <label>Acumulado</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>