force-app/main/default/objects/Documento__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <formula>Cuenta_corriente__r.Cliente__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>