force-app/main/default/objects/Documento__c/fields/Codigo_cliente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_cliente__c</fullName>
    <formula>TEXT( Cuenta_corriente__r.Cliente__r.Numero_cliente__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código cliente</label>
    <type>Text</type>
</CustomField>