force-app/main/default/objects/Documento__c/fields/Cuenta_corriente__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_corriente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta corriente</label>
    <referenceTo>Cuenta_corriente__c</referenceTo>
    <relationshipLabel>Documentos</relationshipLabel>
    <relationshipName>Documentos</relationshipName>
    <type>Lookup</type>
</CustomField>