force-app/main/default/objects/Documento__c/fields/Dias_vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Dias_vencimiento__c</fullName>
    <formula>IF( Vencimiento__c &lt; TODAY(), 0, Vencimiento__c -  TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días vencimiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>