force-app/main/default/objects/Documento__c/fields/Fecha_documento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_documento__c</fullName>
    <label>Fecha documento</label>
    <type>Date</type>
</CustomField>