force-app/main/default/objects/Documento__c/fields/Importe_ajustado__c.field-meta.xml
<CustomField>
    <fullName>Importe_ajustado__c</fullName>
    <label>Importe ajustado</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>