force-app/main/default/objects/Documento__c/fields/Importe_aplicado__c.field-meta.xml
<CustomField>
    <fullName>Importe_aplicado__c</fullName>
    <label>Importe aplicado</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>