force-app/main/default/objects/Documento__c/fields/Importe_documento__c.field-meta.xml
<CustomField>
    <fullName>Importe_documento__c</fullName>
    <label>Importe documento</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>