force-app/main/default/objects/Documento__c/fields/Instrumento_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Instrumento_de_pago__c</fullName>
    <label>Instrumento de pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>