force-app/main/default/objects/Documento__c/fields/Numero_de_liquidacion__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_liquidacion__c</fullName>
    <label>Número de liquidación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>