force-app/main/default/objects/Documento__c/fields/Remito__c.field-meta.xml
<CustomField>
    <fullName>Remito__c</fullName>
    <label>Remito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>