force-app/main/default/objects/Documento__c/fields/Tipo_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_documento__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FC Licitaciones ME</fullName>
            </value>
            <value>
                <fullName>FC Directa Medical</fullName>
            </value>
            <value>
                <fullName>NUB Transferencia ARS</fullName>
            </value>
            <value>
                <fullName>NC Directa Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>