force-app/main/default/objects/Documento__c/fields/Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Vencimiento__c</fullName>
    <label>Vencimiento</label>
    <type>Date</type>
</CustomField>